--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
 			<artifactId>twilio</artifactId>
 			<version>11.0.0-rc.1</version>
 		</dependency>
-
+		<!-- validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
