--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
